# gitlog_analyzer

./: .gitignore  Makefile.am  README.rst  configure.ac
src/: Makefile.am  author.cc  author.h  author_comparator.h  commit.cc  commit.h  commit_comparator.h  fix.cc  fix.h  gitlog_analyzer.h  main.cc
